remove heading in checkout page

--- a/style.css
+++ b/style.css
@@ -10029,6 +10029,7 @@ header.elementor-element {
 .woocommerce-billing-fields > h3 {
   font-size: 24px;
   font-weight: normal;
+  display: none;
 }
 
 .form-row {
