--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -112,6 +112,11 @@
 			padding-bottom: 0;
 		}
 	}
+	.comment-form-cookies-consent {
+		#wp-comment-cookies-consent {
+			width: auto;
+		}
+	}
 }
 
 // GALLERY
