update variation gallery

--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -181,6 +181,10 @@
 }
 
 .product-thumbnail-images {
+	&.has-single-thumbnail-image {
+		display: none;
+	}
+
 	.tns-controls {
 		[data-controls] {
 			width: 30px;
