update responsive slider

--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -244,6 +244,7 @@
 	.thumbnail-item {
 		cursor: pointer;
 		position: relative;
+		max-width: 70px;
 
 		@media (max-width: $screen-md - 1) {
 			padding: 1px;
