--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -265,16 +265,40 @@
 // Spinner gallery slider
 .has-gallery-slider-layout {
 	.has-product-thumbnails {
+		&.has-loading-effect {
+			#product-images {
+				&:not(.tns-slider) {
+					.image-item {
+						&:first-of-type {
+							@extend .circle-loading;
+
+							img {
+								visibility: hidden;
+							}
+						}
+					}
+				}
+			}
+
+			#product-thumbnail-images {
+				&:not(.tns-slider) {
+					.thumbnail-item {
+						&:first-of-type {
+							@extend .circle-loading;
+
+							img {
+								visibility: hidden;
+							}
+						}
+					}
+				}
+			}
+		}
+
 		#product-images {
 			&:not(.tns-slider) {
 				.image-item {
 					&:first-of-type {
-						@extend .circle-loading;
-
-						img {
-							visibility: hidden;
-						}
-
 						~.image-item {
 							display: none;
 						}
@@ -287,12 +311,6 @@
 			&:not(.tns-slider) {
 				.thumbnail-item {
 					&:first-of-type {
-						@extend .circle-loading;
-
-						img {
-							visibility: hidden;
-						}
-
 						~.thumbnail-item {
 							display: none;
 						}
