--- a/assets/css/sass/woocommerce/shop-page.scss
+++ b/assets/css/sass/woocommerce/shop-page.scss
@@ -22,8 +22,10 @@
 			@extend .duration;
 		}
 		&:hover {
-			img {
-				@include scale( 1.1 );
+			@media (min-width: $screen-md) {
+				img {
+					@include scale( 1.1 );
+				}
 			}
 		}
 	}
@@ -47,11 +49,13 @@
 	}
 
 	&:hover{
-		.product-loop-hover-image {
-			opacity: 1;
+		@media (min-width: $screen-md) {
+			.product-loop-hover-image {
+				opacity: 1;
 
-			&+.product-loop-image {
-				opacity: 0;
+				&+.product-loop-image {
+					opacity: 0;
+				}
 			}
 		}
 	}
