Update total price when empty cart

--- a/assets/css/sass/base/layout/header.scss
+++ b/assets/css/sass/base/layout/header.scss
@@ -128,7 +128,7 @@
 		&.align-center {
 			align-items: center;
 		}
-		.woostify-total-price {
+		.woostify-header-total-price {
 			margin-right: 5px;
 		}
 	}
