add some css for woocommerce product filter widget

--- a/assets/css/sass/base/layout/widgets.scss
+++ b/assets/css/sass/base/layout/widgets.scss
@@ -537,3 +537,17 @@
 		}
 	}
 }
+
+/* Active filter */
+.widget_layered_nav_filters {
+	.chosen {
+		a {
+			&:before {
+				content: '×';
+				color: #e2401c;
+				margin-right: 7px;
+				font-size: 1.2em;
+			}
+		}
+	}
+}
