Add show/hide item, toggle item options

--- a/inc/customizer/custom-controls/adv-list/css/adv-list.css
+++ b/inc/customizer/custom-controls/adv-list/css/adv-list.css
@@ -20,6 +20,7 @@
 	background: #fff;
 	border: 1px dashed #333;
 	border-top: none;
+	display: none;
 }
 
 .woostify-sortable-list-item-wrap .woostify-sortable-list-item {
