Display and remove selected icon, Add drag drop sort to items

--- a/inc/customizer/custom-controls/adv-list/css/adv-list.css
+++ b/inc/customizer/custom-controls/adv-list/css/adv-list.css
@@ -54,3 +54,17 @@
 .woostify-adv-list-control.hide {
 	display: none;
 }
+.woostify-adv-list-control .icon-prev {
+	display: flex;
+	align-items: center;
+}
+.woostify-adv-list-control .icon-prev img {
+	width: 32px;
+	height: auto;
+}
+.woostify-adv-list-control .icon-prev.hide {
+	display: none;
+}
+.woostify-adv-list-control .icon-prev .woostify-icon-remove-btn {
+	cursor: pointer;
+}
