Add customize option Enable On, Change type 'compare' into 'shortcode', Display in frontend

--- a/assets/css/sass/base/layout/sticky-footer-bar.scss
+++ b/assets/css/sass/base/layout/sticky-footer-bar.scss
@@ -4,20 +4,68 @@
 	left: 0;
 	bottom: 0;
 	background: #fff;
-	border-top: 1px solid #ccc;
+	border-top: 1px solid #eaeaea;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	z-index: 199;
+
+	&.woostify-sticky-on-desktop {
+		display: none;
+		@media (min-width: 992px) {
+			display: block;
+		}
+	}
+	&.woostify-sticky-on-mobile {
+		@media (min-width: 992px) {
+			display: none;
+		}
+	}
+
 	ul.woostify-item-list {
 		display: flex;
 		align-items: center;
 		padding: 0;
 		margin: 0;
 		list-style: none;
+
 		li.woostify-item-list__item {
 			flex: 1 0 auto;
 			text-align: center;
+
 			a {
 				display: inline-block;
+				vertical-align: middle;
+				position: relative;
+
 				span {
 					display: block;
+					line-height: 1;
+
+					&.woostify-item-list-item__icon {
+						margin-bottom: 5px;
+						font-size: 24px;
+					}
+				}
+			}
+
+			&.woostify-addon:not(.woostify-custom-addon) {
+				a {
+					.woostify-item-list-item__icon {
+						margin: 0;
+						&.cart-icon-rotate {
+							position: relative;
+							transform: rotate3d(0, 1, 0,
+								180deg
+							);
+						}
+					}
+					.theme-item-count, .shop-cart-count {
+						position: absolute;
+						top: -6px;
+						right: -15px;
+						font-size: 12px;
+						line-height: initial;
+					}
 				}
 			}
 		}
