--- a/style.css
+++ b/style.css
@@ -5170,6 +5170,10 @@ article p:last-child {
   position: absolute;
 }
 
+.has-header-transparent .site-header + .site-content {
+  margin-top: 0;
+}
+
 .woostify-icon-bar {
   width: 26px;
   height: 26px;
