--- a/assets/css/sass/base/layout/sticky-footer-bar.scss
+++ b/assets/css/sass/base/layout/sticky-footer-bar.scss
@@ -35,16 +35,21 @@
 			a {
 				display: inline-block;
 				vertical-align: middle;
-				position: relative;
+				line-height: 1;
+				font-size: 13px;
 
-				span {
-					display: block;
-					line-height: 1;
+				.woostify-item-list-item__icon {
+					margin-bottom: 5px;
+					font-size: 24px;
+					position: relative;
+					display: inline-block;
 
-					&.woostify-item-list-item__icon {
-						margin-bottom: 5px;
-						font-size: 24px;
+					.woositfy-sfb-icon {
+						font-size: 20px;
 					}
+				}
+				.woostify-item-list-item__name {
+					display: block;
 				}
 			}
 
@@ -52,19 +57,20 @@
 				a {
 					.woostify-item-list-item__icon {
 						margin: 0;
-						&.cart-icon-rotate {
+						.cart-icon-rotate:before {
 							position: relative;
 							transform: rotate3d(0, 1, 0,
 								180deg
 							);
 						}
-					}
-					.theme-item-count, .shop-cart-count {
-						position: absolute;
-						top: -6px;
-						right: -15px;
-						font-size: 12px;
-						line-height: initial;
+
+						.theme-item-count, .shop-cart-count {
+							position: absolute;
+							top: -6px;
+							right: -15px;
+							font-size: 12px;
+							line-height: initial;
+						}
 					}
 				}
 			}
