--- a/style.css
+++ b/style.css
@@ -6325,29 +6325,35 @@ header.elementor-element {
 .woostify-sticky-footer-bar ul.woostify-item-list li.woostify-item-list__item a {
   display: inline-block;
   vertical-align: middle;
-  position: relative;
-}
-
-.woostify-sticky-footer-bar ul.woostify-item-list li.woostify-item-list__item a span {
-  display: block;
   line-height: 1;
+  font-size: 13px;
 }
 
-.woostify-sticky-footer-bar ul.woostify-item-list li.woostify-item-list__item a span.woostify-item-list-item__icon {
+.woostify-sticky-footer-bar ul.woostify-item-list li.woostify-item-list__item a .woostify-item-list-item__icon {
   margin-bottom: 5px;
   font-size: 24px;
+  position: relative;
+  display: inline-block;
+}
+
+.woostify-sticky-footer-bar ul.woostify-item-list li.woostify-item-list__item a .woostify-item-list-item__icon .woositfy-sfb-icon {
+  font-size: 20px;
+}
+
+.woostify-sticky-footer-bar ul.woostify-item-list li.woostify-item-list__item a .woostify-item-list-item__name {
+  display: block;
 }
 
 .woostify-sticky-footer-bar ul.woostify-item-list li.woostify-item-list__item.woostify-addon:not(.woostify-custom-addon) a .woostify-item-list-item__icon {
   margin: 0;
 }
 
-.woostify-sticky-footer-bar ul.woostify-item-list li.woostify-item-list__item.woostify-addon:not(.woostify-custom-addon) a .woostify-item-list-item__icon.cart-icon-rotate {
+.woostify-sticky-footer-bar ul.woostify-item-list li.woostify-item-list__item.woostify-addon:not(.woostify-custom-addon) a .woostify-item-list-item__icon .cart-icon-rotate:before {
   position: relative;
   transform: rotate3d(0, 1, 0, 180deg);
 }
 
-.woostify-sticky-footer-bar ul.woostify-item-list li.woostify-item-list__item.woostify-addon:not(.woostify-custom-addon) a .theme-item-count, .woostify-sticky-footer-bar ul.woostify-item-list li.woostify-item-list__item.woostify-addon:not(.woostify-custom-addon) a .shop-cart-count {
+.woostify-sticky-footer-bar ul.woostify-item-list li.woostify-item-list__item.woostify-addon:not(.woostify-custom-addon) a .woostify-item-list-item__icon .theme-item-count, .woostify-sticky-footer-bar ul.woostify-item-list li.woostify-item-list__item.woostify-addon:not(.woostify-custom-addon) a .woostify-item-list-item__icon .shop-cart-count {
   position: absolute;
   top: -6px;
   right: -15px;
