--- a/assets/css/sass/base/layout/sticky-footer-bar.scss
+++ b/assets/css/sass/base/layout/sticky-footer-bar.scss
@@ -77,3 +77,11 @@
 		}
 	}
 }
+
+.has-header-layout-7 {
+	.woostify-sticky-footer-bar {
+		width: calc( 100% - 300px);
+		right: 0;
+		left: auto;
+	}
+}
