--- a/inc/customizer/custom-controls/tabs/css/tabs.css
+++ b/inc/customizer/custom-controls/tabs/css/tabs.css
@@ -44,3 +44,13 @@
 	background: transparent;
 	border-bottom-color: #f0f0f1;
 }
+
+.woostify-component-tabs ul li.active:before {
+	position: absolute;
+	content: '';
+	top: -1px;
+	left: -1px;
+	right: -1px;
+	height: 2px;
+	background: #2271b1;
+}
