--- a/assets/css/sass/base/layout/sticky-footer-bar.scss
+++ b/assets/css/sass/base/layout/sticky-footer-bar.scss
@@ -39,7 +39,6 @@
 				font-size: 13px;
 
 				.woostify-item-list-item__icon {
-					margin-bottom: 5px;
 					font-size: 24px;
 					position: relative;
 					display: inline-block;
@@ -80,8 +79,10 @@
 
 .has-header-layout-7 {
 	.woostify-sticky-footer-bar {
-		width: calc( 100% - 300px);
-		right: 0;
-		left: auto;
+		@media (min-width: 993px) {
+			width: calc(100% - 300px);
+			right: 0;
+			left: auto;
+		}
 	}
 }
