--- a/inc/customizer/custom-controls/tabs/css/tabs.css
+++ b/inc/customizer/custom-controls/tabs/css/tabs.css
@@ -1,16 +1,18 @@
 .woostify-component-tabs {
 	position: relative;
 }
+
 .woostify-component-tabs:after {
 	position: absolute;
 	height: 1px;
 	background: #d6d6d6;
-	width: calc( 100% + 24px);
+	width: calc(100% + 24px);
 	left: -12px;
 	right: -12px;
 	bottom: 0;
 	z-index: 1;
 }
+
 .woostify-component-tabs ul {
 	display: flex;
 	position: relative;
@@ -54,6 +56,18 @@
 	height: 2px;
 	background: #2271b1;
 }
+
 .woostify-component-tabs ul li.disabled-btn {
-    opacity: 0;
+	opacity: 0;
+}
+
+.customize-control.customize-control-woostify-tabs {
+	transition: all .3s;
+	max-height: 100px;
+}
+
+.customize-control.customize-control-woostify-tabs.woostify-hide {
+	max-height: 0;
+	overflow: hidden;
+	margin: 0;
 }
