hide added to cart button

--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -1,6 +1,13 @@
 // Variables
 $size: 40px;
 
+// Hide added_to_cart button
+.hide-added-to-cart {
+	.added_to_cart {
+		display: none !important;
+	}
+}
+
 // Out of stock label
 .woostify-out-of-stock-label {
 	position: absolute;
