--- a/style.css
+++ b/style.css
@@ -6822,6 +6822,10 @@ header.elementor-element {
   font-style: normal;
 }
 
+.hide-added-to-cart .added_to_cart {
+  display: none !important;
+}
+
 .woostify-out-of-stock-label {
   position: absolute;
   top: 10px;
