--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -3,6 +3,14 @@ $size: 40px;
 
 // Hide added_to_cart button
 .hide-added-to-cart {
+	.product-loop-meta {
+		.animated-meta {
+			.added {
+				display: flex;
+			}
+		}
+	}
+
 	.added_to_cart {
 		display: none !important;
 	}
