--- a/assets/css/sass/base/layout/sticky-footer-bar.scss
+++ b/assets/css/sass/base/layout/sticky-footer-bar.scss
@@ -43,10 +43,16 @@
 				.woostify-item-list-item__icon {
 					font-size: 24px;
 					position: relative;
-					display: inline-block;
+					display: inline-flex;
+					align-items: center;
+					flex-wrap: wrap;
+					align-content: center;
 
 					.woositfy-sfb-icon {
-						font-size: 20px;
+						display: inline-flex;
+						align-items: center;
+						flex-wrap: wrap;
+						align-content: center;
 
 						svg {
 							display: block;
@@ -92,4 +98,12 @@
 			left: auto;
 		}
 	}
+}
+
+.woostify-inline-flex {
+	-js-display: inline-flex;
+	display: inline-flex;
+	align-items: center;
+	flex-wrap: wrap;
+	align-content: center;
 }
