Add Link values together for Responsive Group Control

--- a/inc/customizer/custom-controls/group/css/group.css
+++ b/inc/customizer/custom-controls/group/css/group.css
@@ -25,24 +25,45 @@
 
 .customize-control-woostify-group .woostify-group-container {
 	display: flex;
-	margin-left: -15px;
+	margin-left: -5px;
 }
 
 .customize-control-woostify-group .woostify-group-container .woostify-group-field {
 	width: 25%;
-	padding-left: 15px;
+	padding-left: 5px;
+	text-align: center;
+	text-transform: uppercase;
+}
+
+.customize-control-woostify-group .woostify-group-container .woostify-link-value-together {
+	padding-left: 5px;
+}
+
+.customize-control-woostify-group .woostify-group-container .woostify-link-value-together .woostify-link-value-together-btn {
+	height: 30px;
+	line-height: 30px;
+	font-size: 14px;
+	box-sizing: border-box;
+	border: 1px solid #3498D9;
+	background: #fff;
+	border-radius: 2px;
+	color: #3498D9;
+	margin: 0;
+	width: 30px;
+	cursor: pointer;
 }
 
 .customize-control-woostify-group .woostify-group-container .woostify-group-field .woostify-group-field-label {
-	font-size: 12px;
-	font-weight: bold;
+	font-size: 11px;
+	text-transform: uppercase;
 }
 
 .customize-control-woostify-group .woostify-group-container .woostify-group-field input {
-	padding: 0 0 0 5px;
-	border-radius: 0;
+	padding: 0;
+	border-radius: 2px;
 	font-size: 12px;
 	border-color: #ddd;
+	text-align: center;
 }
 
 /* Chrome, Safari, Edge, Opera */
