--- a/assets/css/sass/woocommerce/shop-page.scss
+++ b/assets/css/sass/woocommerce/shop-page.scss
@@ -187,6 +187,14 @@
 	padding: 25px 15px;
 }
 
+.disabled-icon-add-cart-button {
+	.added_to_cart {
+		&:before {
+			content: none;
+		}
+	}
+}
+
 #secondary{
 	.select2-selection--multiple{
 		min-height: auto;
