--- a/style.css
+++ b/style.css
@@ -8123,6 +8123,10 @@ header.elementor-element {
   padding: 25px 15px;
 }
 
+.disabled-icon-add-cart-button .added_to_cart:before {
+  content: none;
+}
+
 #secondary .select2-selection--multiple {
   min-height: auto;
 }
